# ifs-interview-submission

./: README.md  pyproject.toml
notebooks/: data_analysis.ipynb
