[project]
name = "ifs-interview-submission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter-cjk-xelatex>=0.2",
    "nbformat>=5.10.4",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "prophet>=1.1.6",
    "pydantic>=2.11.2",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]
